<resources>
    <string name="app_name">Europe Quiz</string>

    <string name="one">1</string>
    <string name="question1">Which monuments are in the famous french city, Paris?</string>
    <string name="answer1a">Notre Dame</string>
    <string name="answer1b">Eiffel Tower</string>
    <string name="answer1c">The Mona Lisa</string>
    <string name="answer1d">The Colosseum</string>

    <string name="two">2</string>
    <string name="question2">What is the capital city of Hungary?</string>
    <string name="answer2a">Bucarest</string>
    <string name="answer2b">Bratislava</string>
    <string name="answer2c">Budapest</string>
    <string name="answer2d">Vienna</string>

    <string name="three">3</string>
    <string name="question3">What is the portuguese city, Porto well known for?</string>
    <string name="answer3a">Dom Luis bridge designed by Gustave Eiffel</string>
    <string name="answer3b">Aztec churches hidden in a near jungle </string>
    <string name="answer3c">Their legendary cricket team</string>
    <string name="answer3d">Porto wine</string>

    <string name="four">4</string>
    <string name="question4">What is "El Clasico" ?</string>
    <string name="answer4a">The match between Barcelona and Real Madrid</string>
    <string name="answer4b">Name of a western hero</string>
    <string name="answer4c">A chess move</string>
    <string name="answer4d">Traditional fish soup</string>

    <string name="five">5</string>
    <string name="question5">Which of the following companies are based in Sweden?</string>
    <string name="answer5a">IKEA</string>
    <string name="answer5b">Coca Cola</string>
    <string name="answer5c">Ericsson</string>
    <string name="answer5d">Volvo</string>

    <string name="six">6</string>
    <string name="question6">The hometown of the most popular music band (Beatles) in history is...</string>
    <string name="answer6">Liverpool</string>

    <string name="submit">Submit Quiz</string>
    <string name="tryagain">Try again!</string>

    <string name="result">Your made a total of</string>
    <string name="points">points!</string>

    <string name="bad">Come on, you can do it better!</string>
    <string name="okay">You are doing good, lets try it once again!</string>
    <string name="good">You did it very good, want to try to make it perfect?</string>
    <string name="perfect">Wow, you were absolutely perfect!</string>

</resources>
