<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            android:src="@drawable/france" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/number"
                android:text="@string/one" />

            <TextView
                style="@style/question"
                android:text="@string/question1" />

        </LinearLayout>

        <TextView style="@style/separator" />

        <CheckBox
            android:id="@+id/checkbox1a"
            style="@style/myCheckbox"
            android:text="@string/answer1a" />

        <CheckBox
            android:id="@+id/checkbox1b"
            style="@style/myCheckbox"
            android:text="@string/answer1b" />

        <CheckBox
            android:id="@+id/checkbox1c"
            style="@style/myCheckbox"
            android:text="@string/answer1c" />

        <CheckBox
            android:id="@+id/checkbox1d"
            style="@style/myCheckbox"
            android:text="@string/answer1d" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/hungary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/number"
                android:text="@string/two" />

            <TextView
                style="@style/question"
                android:text="@string/question2" />

        </LinearLayout>

        <TextView style="@style/separator" />

        <RadioGroup
            android:id="@+id/radiogroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio2a"
                style="@style/myCheckbox"
                android:text="@string/answer2a" />

            <RadioButton
                android:id="@+id/radio2b"
                style="@style/myCheckbox"
                android:text="@string/answer2b" />


            <RadioButton
                android:id="@+id/radio2c"
                style="@style/myCheckbox"
                android:text="@string/answer2c" />

            <RadioButton
                android:id="@+id/radio2d"
                style="@style/myCheckbox"
                android:text="@string/answer2d" />

        </RadioGroup>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/portugal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/number"
                android:text="@string/three" />

            <TextView
                style="@style/question"
                android:text="@string/question3" />

        </LinearLayout>

        <TextView style="@style/separator" />

        <CheckBox
            android:id="@+id/checkbox3a"
            style="@style/myCheckbox"
            android:text="@string/answer3a" />

        <CheckBox
            android:id="@+id/checkbox3b"
            style="@style/myCheckbox"
            android:text="@string/answer3b" />


        <CheckBox
            android:id="@+id/checkbox3c"
            style="@style/myCheckbox"
            android:text="@string/answer3c" />

        <CheckBox
            android:id="@+id/checkbox3d"
            style="@style/myCheckbox"
            android:text="@string/answer3d" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/spain" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/number"
                android:text="@string/four" />

            <TextView
                style="@style/question"
                android:text="@string/question4" />

        </LinearLayout>

        <TextView style="@style/separator" />

        <RadioGroup
            android:id="@+id/radiogroup4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio4a"
                style="@style/myCheckbox"
                android:text="@string/answer4a" />

            <RadioButton
                android:id="@+id/radio4b"
                style="@style/myCheckbox"
                android:text="@string/answer4b" />

            <RadioButton
                android:id="@+id/radio4c"
                style="@style/myCheckbox"
                android:text="@string/answer4c" />

            <RadioButton
                android:id="@+id/radio4d"
                style="@style/myCheckbox"
                android:text="@string/answer4d" />

        </RadioGroup>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/sweden" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/number"
                android:text="@string/five" />

            <TextView
                style="@style/question"
                android:text="@string/question5" />

        </LinearLayout>

        <TextView style="@style/separator" />

        <CheckBox
            android:id="@+id/checkbox5a"
            style="@style/myCheckbox"
            android:text="@string/answer5a" />

        <CheckBox
            android:id="@+id/checkbox5b"
            style="@style/myCheckbox"
            android:text="@string/answer5b" />

        <CheckBox
            android:id="@+id/checkbox5c"
            style="@style/myCheckbox"
            android:text="@string/answer5c" />

        <CheckBox
            android:id="@+id/checkbox5d"
            style="@style/myCheckbox"
            android:text="@string/answer5d" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/unitedkingdom" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/number"
                android:text="@string/six" />

            <TextView
                style="@style/question"
                android:text="@string/question6" />

        </LinearLayout>

        <TextView style="@style/separator" />

        <EditText
            android:id="@+id/edit6"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:layout_marginLeft="16dp"
            android:paddingTop="16dp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_light"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>
